# applsoftcomp-sprint-m03

./: .gitignore  app.js  index.html
.agents/skills/financial_news/: PRD.md  README.md  SKILL.md  app.js  pyproject.toml
.agents/skills/financial_news/.github/workflows/: financial_news.yml
.agents/skills/financial_news/data/: 2024-01-12.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-14.json  2026-04-15.json  2026-04-20.json  2026-04-21.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  (+51 more)
.agents/skills/financial_news/src/: ai_service.py  pipeline.py  scraper.py
.agents/skills/financial_news/tests/: test_ai_service.py  test_pipeline.py  test_scraper.py
data/: 2024-01-13.json  2024-01-14.json  2024-01-15.json  2026-04-12.json  2026-04-13.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-05-10.json  2026-05-11.json  2026-05-16.json  2026-06-26.json  2026-06-28.json  2026-06-30.json  2026-07-01.json  2026-07-18.json  2026-07-20.json  aggregates.json  api_cache.json
(+3 files in other folders)
